--- a/files.html
+++ b/files.html
@@ -6,7 +6,7 @@ layout: default
     <div class="large-6 columns">
       <h1>Statut koła</h1>
       <p>
-        Statut to najważniejszy z aktów prawnych każdego koła naukowego regulujący zadania, strukturę organizacyjną i sposób działania. Nasz statut znajdziesz tutaj w <a href="download/Statut%20koła%20naukowego%20Epicentrum.pdf" target="_blank">formacie PDF</a> oraz <a href="download/Statut%20koła%20naukowego%20Epicentrum.docx">DOCX</a> umożliwiającym edycje.
+        Statut to najważniejszy z aktów prawnych każdego koła naukowego regulujący zadania, strukturę organizacyjną i sposób działania. Nasz statut znajdziesz tutaj w <a href="/download/Statut%20koła%20naukowego%20Epicentrum.pdf" target="_blank">formacie PDF</a> oraz <a href="/download/Statut%20koła%20naukowego%20Epicentrum.docx">DOCX</a> umożliwiającym edycje.
       </p>
     </div>
 
@@ -16,7 +16,7 @@ layout: default
         Logo może składać się z sygnetu, logotypu oraz tagline. Sygnet to element graficzny reprezentujący organizację, logotyp to część typograficzna. Tagline natomiast to hasło umieszczane zazwyczaj pod logotypem. Pojedyncze elementy takie jak sygnet lub logotyp mogą tworzyć logo.
       </p>
       <p>
-        Sygnet: <a href="download/Sygnet%20Epicentrum%20(format%20PNG).zip">PNG</a> + <a href="download/Sygnet%20Epicentrum%20(format%20SVG).zip">SVG</a> + <a href="download/Sygnet%20Epicentrum%20(format%20PSD).psd">PSD</a>
+        Sygnet: <a href="/download/Sygnet%20Epicentrum%20(format%20PNG).zip">PNG</a> + <a href="/download/Sygnet%20Epicentrum%20(format%20SVG).zip">SVG</a> + <a href="/download/Sygnet%20Epicentrum%20(format%20PSD).psd">PSD</a>
       </p>
     </div>
   </div>
