--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ layout: default
     <p id="welcome-text">
       Zajmujemy się projektowaniem interfejsów oraz badaniem i opisywaniem zjawisk związanych z używaniem systemów komputerowych przez ludzi. Tworzymy aplikacje zorientowane na użytkownika zwracając przy tym szczególną uwagę na design, user experience oraz wysoką użyteczność i dostępność produktu końcowego. Działamy przy Wydziale Zarządzania i Komunikacji Społecznej Uniwersytetu Jagiellońskiego.
     </p>
-    <a href="about.html" class="button-filled">Dowiedz się więcej</a>
-    <a href="contact.html" class="button-transparent">Dołącz do nas</a>
+    <a href="/about.html" class="button-filled">Dowiedz się więcej</a>
+    <a href="/contact.html" class="button-transparent">Dołącz do nas</a>
   </div>
 </section>
