Update academic title

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@ layout: default
     <h1>Zarząd</h1>
     <p>
       <b>Opiekun naukowy koła</b><br>
-      mgr inż. Aleksander Smywiński-Pohl<br><br>
+      dr inż. Aleksander Smywiński-Pohl<br><br>
 
       <b>Prezes</b><br>
       Damian Kałwa<br>
