Add email address

--- a/about.html
+++ b/about.html
@@ -31,7 +31,8 @@ layout: default
     <h1>Zarząd</h1>
     <p>
       <b>Opiekun naukowy koła</b><br>
-      dr inż. Aleksander Smywiński-Pohl<br><br>
+      dr inż. Aleksander Smywiński-Pohl<br>
+      <a href="mailto:aleksander.pohl@uj.edu.pl">aleksander.pohl@uj.edu.pl</a><br><br>
 
       <b>Prezes</b><br>
       Damian Kałwa<br>
