Add info about patronage

--- a/projects.html
+++ b/projects.html
@@ -11,6 +11,12 @@ layout: default
       <p>
         <a href="http://www.facebook.com/EpizodyIT" target="_blank">www.facebook.com/EpizodyIT</a>
       </p>
+      <p>
+        Patron medialny:
+      </p>
+      <figure>
+        <img src="/img/projects/spotkania_it.png" alt="Logo Spotkania IT">
+      </figure>
     </div>
 
     <div class="large-6 columns">
