--- a/files.html
+++ b/files.html
@@ -16,7 +16,8 @@ layout: default
         Logo może składać się z sygnetu, logotypu oraz tagline. Sygnet to element graficzny reprezentujący organizację, logotyp to część typograficzna. Tagline natomiast to hasło umieszczane zazwyczaj pod logotypem. Pojedyncze elementy takie jak sygnet lub logotyp mogą tworzyć logo.
       </p>
       <p>
-        Sygnet: <a href="/download/Sygnet%20Epicentrum%20(format%20PNG).zip">PNG</a> + <a href="/download/Sygnet%20Epicentrum%20(format%20SVG).zip">SVG</a> + <a href="/download/Sygnet%20Epicentrum%20(format%20PSD).psd">PSD</a>
+        Sygnet Epicentrum: <a href="/download/Sygnet%20Epicentrum%20(format%20PNG).zip">PNG</a> + <a href="/download/Sygnet%20Epicentrum%20(format%20SVG).zip">SVG</a> + <a href="/download/Sygnet%20Epicentrum%20(format%20PSD).psd">PSD</a><br>
+        Logo kierunku EPI: <a href="/download/Logo%20EPI.png">PNG</a>
       </p>
     </div>
   </div>
