Update info about the board

--- a/about.html
+++ b/about.html
@@ -37,24 +37,24 @@ layout: default
       <a href="mailto:aleksander.pohl@uj.edu.pl">aleksander.pohl@uj.edu.pl</a><br><br>
 
       <b>Prezes</b><br>
-      Damian Kałwa<br>
-      <a href="mailto:dkalwa@gmail.com">dkalwa@gmail.com</a><br><br>
-
-      <b>Pełnomocnik ds. organizacyjnych</b><br>
       Kinga Cepielik<br>
       <a href="mailto:kingacepielik@gmail.com">kingacepielik@gmail.com</a><br><br>
 
       <b>Pełnomocnik ds. naukowych</b><br>
-      Ryszard Czernecki<br>
-      <a href="mailto:raczernecki@gmail.com">raczernecki@gmail.com</a><br><br>
+      Damian Kałwa<br>
+      <a href="mailto:dkalwa@gmail.com">dkalwa@gmail.com</a><br><br>
 
-      <b>Sekretarz</b><br>
-      Julia Pukalska<br>
-      <a href="mailto:jpukalska@gmail.com">jpukalska@gmail.com</a><br><br>
+      <b>Pełnomocnik ds. organizacyjnych</b><br>
+      Anna Bogusz<br>
+      <a href="mailto:ania.bogusz@student.uj.edu.pl">ania.bogusz@student.uj.edu.pl</a><br><br>
+
+      <b>Pełnomocnik ds. organizacji wydarzeń</b><br>
+      Aleksandra Krasnowska<br>
+      <a href="mailto:a.krasnowska@interia.eu">a.krasnowska@interia.eu</a><br><br>
 
       <b>Skarbnik</b><br>
-      Anna Bogusz<br>
-      <a href="mailto:ania.bogusz@student.uj.edu.pl">ania.bogusz@student.uj.edu.pl</a>
+      Julia Pukalska<br>
+      <a href="mailto:jpukalska@gmail.com">jpukalska@gmail.com</a>
     </p>
 
     <h1>Członkowie</h1>
