Update list of members

--- a/about.html
+++ b/about.html
@@ -59,26 +59,35 @@ layout: default
 
     <h1>Członkowie</h1>
     <ol id="members">
-      <li>Agata Redyk</li>
-      <li>Agnieszka Rączka</li>
+      <li>Dagmara Bator</li>
       <li>Anna Bogusz</li>
-      <li>Anna Wróbel</li>
-      <li>Damian Kałwa</li>
-      <li>Dorota Kuśmierz</li>
-      <li>Grzesiek Stefański</li>
+      <li>Joanna Byszuk</li>
+      <li>Kinga Cepielik</li>
+      <li>Ryszard Czernecki</li>
+      <li>Zuzanna Drohomirecka</li>
       <li>Iwona Guguła</li>
       <li>Joanna Jadach</li>
-      <li>Joanna Sierant</li>
-      <li>Jola Klima</li>
+      <li>Damian Kałwa</li>
+      <li>Barbara Kciuk</li>
+      <li>Rafał Kiciński</li>
+      <li>Jolanta Klima</li>
+      <li>Magdalena Klimek</li>
+      <li>Aleksandra Krasnowska</li>
+      <li>Dorota Kuśmierz</li>
+      <li>Alicja Musiał</li>
+      <li>Patryk Olczyk</li>
+      <li>Beata Piechowicz</li>
+      <li>Krzysztof Poręba</li>
       <li>Julia Pukalska</li>
+      <li>Agnieszka Rączka</li>
+      <li>Agata Redyk</li>
       <li>Justyna Rząca</li>
-      <li>Karolina Piekarz</li>
-      <li>Kasia Sordyl</li>
-      <li>Kinga Cepielik</li>
+      <li>Joanna Sierant</li>
+      <li>Katarzyna Sordyl</li>
+      <li>Grzegorz Stefański</li>
       <li>Rafał Trzop</li>
-      <li>Ryszard Czernecki</li>
       <li>Urszula Witkowicz</li>
-      <li>Zuza Drohomirecka</li>
+      <li>Urszula Ziętek</li>
     </ol>
   </aside>
 </section>
