Track GA download event

--- a/files.html
+++ b/files.html
@@ -6,7 +6,7 @@ layout: default
     <div class="large-6 columns">
       <h1>Statut koła</h1>
       <p>
-        Statut to najważniejszy z aktów prawnych każdego koła naukowego regulujący zadania, strukturę organizacyjną i sposób działania. Nasz statut znajdziesz tutaj w <a href="/download/Statut%20koła%20naukowego%20Epicentrum.pdf" target="_blank">formacie PDF</a> oraz <a href="/download/Statut%20koła%20naukowego%20Epicentrum.docx">DOCX</a> umożliwiającym edycje.
+        Statut to najważniejszy z aktów prawnych każdego koła naukowego regulujący zadania, strukturę organizacyjną i sposób działania. Nasz statut znajdziesz tutaj w <a href="/download/Statut%20koła%20naukowego%20Epicentrum.pdf" target="_blank" onClick="ga('send', 'event', { eventCategory: 'Statut', eventAction: 'Pobranie', eventLabel: 'PDF'});">formacie PDF</a> oraz <a href="/download/Statut%20koła%20naukowego%20Epicentrum.docx">DOCX</a> umożliwiającym edycje.
       </p>
     </div>
 
