Serve website over HTTPS and fix mixed content error

--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@ layout: default
     </div>
   </div>
 
-  <form method="POST" action="http://formspree.io/skn.epicentrum@gmail.com">
+  <form method="POST" action="https://formspree.io/skn.epicentrum@gmail.com">
     <div class="row small-collapse large-uncollapse">
       <div class="large-4 columns">
         <input type="text" name="first_name" placeholder="Imię" required>
