Updated members list

--- a/about.html
+++ b/about.html
@@ -59,35 +59,41 @@ layout: default
 
     <h1>Członkowie</h1>
     <ol id="members">
-      <li>Dagmara Bator</li>
-      <li>Anna Bogusz</li>
-      <li>Joanna Byszuk</li>
-      <li>Kinga Cepielik</li>
-      <li>Ryszard Czernecki</li>
-      <li>Zuzanna Drohomirecka</li>
-      <li>Iwona Guguła</li>
+      <li>Mateusz Bułat</li>
+      <li>Aleksandra Cichowska</li>
+      <li>Mateusz Ciszczoń</li>
+      <li>Kamil	Dragan</li>
+      <li>Iga Dudek</li>
+      <li>Karolina Feluś</li>
+      <li>Dorota Furas</li>
+      <li>Justyna Gałek</li>
+      <li>Paweł	Garapich</li>
+      <li>Daniel Gądek</li>
+      <li>Paulina Grabowska</li>
+      <li>Iwona	Guguła</li>
+      <li>Zuzanna Jacewicz</li>
       <li>Joanna Jadach</li>
-      <li>Damian Kałwa</li>
-      <li>Barbara Kciuk</li>
-      <li>Rafał Kiciński</li>
-      <li>Jolanta Klima</li>
-      <li>Magdalena Klimek</li>
-      <li>Aleksandra Krasnowska</li>
-      <li>Dorota Kuśmierz</li>
-      <li>Alicja Musiał</li>
-      <li>Patryk Olczyk</li>
-      <li>Beata Piechowicz</li>
+      <li>Monika Jaroś</li>
+      <li>Martyna Korczyńska</li>
+      <li>Michał Kuć</li>
+      <li>Agnieszka Lempaszek</li>
+      <li>Wiktoria Łucarz</li>
+      <li>Gabriela Matysiak</li>
+      <li>Anna Mendera</li>
+      <li>Agnieszka Moryc</li>
       <li>Krzysztof Poręba</li>
-      <li>Julia Pukalska</li>
-      <li>Agnieszka Rączka</li>
-      <li>Agata Redyk</li>
-      <li>Justyna Rząca</li>
-      <li>Joanna Sierant</li>
-      <li>Katarzyna Sordyl</li>
+      <li>Oliwia Przybyszewska</li>
+      <li>Marcin Puczko</li>
+      <li>Joanna Romańska</li>
+      <li>Aneta Satława</li>
+      <li>Agnieszka Siemion</li>
+      <li>Patryk Starzyński</li>
       <li>Grzegorz Stefański</li>
-      <li>Rafał Trzop</li>
-      <li>Urszula Witkowicz</li>
-      <li>Urszula Ziętek</li>
+      <li>Michał Stefański</li>
+      <li>Mateusz Supeł</li>
+      <li>Krzysztof Wróbel</li>
+      <li>Anna Wróbel</li>
+      <li>Magdalena Zych</li>
     </ol>
   </aside>
 </section>
