Updated members list 2

--- a/about.html
+++ b/about.html
@@ -33,28 +33,24 @@ layout: default
     <h1>Zarząd</h1>
     <p>
       <b>Opiekun naukowy koła</b><br>
-      dr inż. Aleksander Smywiński-Pohl<br>
-      <a href="mailto:aleksander.pohl@uj.edu.pl">aleksander.pohl@uj.edu.pl</a><br><br>
+      mgr inż. Krzysztof Wróbel<br>
+      <a href="mailto:krzysztof.pawel.wrobel@uj.edu.pl">krzysztof.pawel.wrobel@uj.edu.pl</a><br><br>
 
-      <b>Prezes</b><br>
-      Kinga Cepielik<br>
-      <a href="mailto:kingacepielik@gmail.com">kingacepielik@gmail.com</a><br><br>
+      <b>Przewodnicząca</b><br>
+      Anna Kielar<br>
+      <a href="mailto:skn.epicentrum@gmail.com">skn.epicentrum@gmail.com</a><br><br>
 
-      <b>Pełnomocnik ds. naukowych</b><br>
-      Damian Kałwa<br>
-      <a href="mailto:dkalwa@gmail.com">dkalwa@gmail.com</a><br><br>
+      <b>Pełnomocnik ds. promocji</b><br>
+      Katarzyna Kurowska<br>
 
-      <b>Pełnomocnik ds. organizacyjnych</b><br>
-      Anna Bogusz<br>
-      <a href="mailto:ania.bogusz@student.uj.edu.pl">ania.bogusz@student.uj.edu.pl</a><br><br>
+      <b>Pełnomocnik ds. wydarzeń</b><br>
+      Klaudia Pociecha<br>
 
-      <b>Pełnomocnik ds. organizacji wydarzeń</b><br>
-      Aleksandra Krasnowska<br>
-      <a href="mailto:a.krasnowska@interia.eu">a.krasnowska@interia.eu</a><br><br>
+      <b>Pełnomocnik ds. webowych i montażu</b><br>
+      Patryk Samborski<br>
 
-      <b>Skarbnik</b><br>
-      Julia Pukalska<br>
-      <a href="mailto:jpukalska@gmail.com">jpukalska@gmail.com</a>
+      <b>Skarbnik/Sekretarz</b><br>
+      Ryszard Czernecki<br>
     </p>
 
     <h1>Członkowie</h1>
